--- a/README
+++ b/README
@@ -2,5 +2,6 @@
 目标：爬虫的基本原理，正则表达式，iPhone上捷径编写
 
 参考代码：https://github.com/greenliao/Holidays-crawler
+参考代码：https://ask.hellobi.com/blog/bailin0007/5604
 
 Python库 BeautifulSoup
